--- a/list.html
+++ b/list.html
@@ -6,107 +6,66 @@
   <title>Список посилок</title>
   <style>
     body { font-family: sans-serif; padding: 10px; max-width: 480px; margin: auto; }
-    h1 { text-align: center; margin-bottom: 10px; }
-    table { width: 100%; border-collapse: collapse; font-size: 14px; }
-    th, td { border: 1px solid #ccc; padding: 4px; text-align: left; }
-    th { background: #eee; }
-    button { margin: 10px 0; padding: 10px; width: 100%; background: #28a745; color: white; border: none; border-radius: 5px; font-size: 16px; }
-    button:hover { background: #218838; }
+    h1 { text-align: center; margin-bottom: 20px; }
+    .parcel { border: 1px solid #ccc; border-radius: 6px; padding: 10px; margin-bottom: 12px; background: #f8f8f8; }
+    .parcel strong { display: block; margin-top: 4px; }
+    button { width: 100%; margin-top: 10px; padding: 10px; border: none; background: #007bff; color: white; font-size: 16px; border-radius: 5px; }
+    button:hover { background: #0056b3; }
   </style>
 </head>
 <body>
 
-<h1>Усі посилки</h1>
-<button id="exportPdf">Завантажити PDF</button>
-<table>
-  <thead>
-    <tr>
-      <th>№</th>
-      <th>Вага</th>
-      <th>К-сть</th>
-      <th>Обʼємна вага</th>
-      <th>Місто</th>
-      <th>НП</th>
-      <th>Телефон</th>
-      <th>Ціна</th>
-    </tr>
-  </thead>
-  <tbody id="parcelTable"></tbody>
-</table>
+<h1>Список посилок</h1>
+<div id="list">Завантаження...</div>
+<button onclick="location.href='index.html'">Додати нову посилку</button>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
 <script>
-  const tableBody = document.getElementById('parcelTable');
-  const { jsPDF } = window.jspdf;
+  const listEl = document.getElementById('list');
 
   let db;
   const request = indexedDB.open('ParcelsDB', 1);
-  request.onsuccess = event => {
-    db = event.target.result;
-    loadParcels();
-  };
 
-  function loadParcels() {
-    const tx = db.transaction(['parcels'], 'readonly');
+  request.onsuccess = e => {
+    db = e.target.result;
+    const tx = db.transaction('parcels', 'readonly');
     const store = tx.objectStore('parcels');
-    const req = store.getAll();
+    const getAll = store.getAll();
 
-    req.onsuccess = () => {
-      const parcels = req.result;
+    getAll.onsuccess = () => {
+      const parcels = getAll.result;
       if (parcels.length === 0) {
-        tableBody.innerHTML = '<tr><td colspan="8" style="text-align:center;">Немає посилок</td></tr>';
+        listEl.textContent = 'Посилок поки немає.';
         return;
       }
 
-      tableBody.innerHTML = '';
+      listEl.innerHTML = '';
       parcels.forEach(p => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${p.number}</td>
-          <td>${p.weight.toFixed(2)}</td>
-          <td>${p.count}</td>
-          <td>${p.volumes.map(v => v.toFixed(2)).join(', ')}</td>
-          <td>${p.city}</td>
-          <td>${p.branch}</td>
-          <td>${p.phone}</td>
-          <td>${p.price.toFixed(2)}</td>
+        const div = document.createElement('div');
+        div.className = 'parcel';
+        div.innerHTML = `
+          <strong>№: ${p.number}</strong>
+          <div>Вага: ${p.weight.toFixed(2)} кг</div>
+          <div>Кількість місць: ${p.count}</div>
+          <div>Обʼємна вага: ${p.volumes.map(v => v.toFixed(2)).join(', ')} кг</div>
+          <div>Місто: ${p.city}</div>
+          <div>Відділення: ${p.branch}</div>
+          <div>Телефон: ${p.phone}</div>
+          <div>Ціна: €${p.price.toFixed(2)}</div>
+          <div>Опис: ${p.desc || '-'}</div>
+          <div>Дата: ${new Date(p.createdAt).toLocaleString()}</div>
         `;
-        tableBody.appendChild(row);
+        listEl.appendChild(div);
       });
     };
-  }
 
-  document.getElementById('exportPdf').addEventListener('click', () => {
-    const tx = db.transaction(['parcels'], 'readonly');
-    const store = tx.objectStore('parcels');
-    const req = store.getAll();
-
-    req.onsuccess = () => {
-      const data = req.result;
-      if (!data.length) return alert("Немає посилок для PDF");
-
-      const doc = new jsPDF();
-      doc.text("Список посилок", 14, 16);
-      doc.autoTable({
-        startY: 20,
-        head: [['№', 'Вага', 'К-сть', 'Обʼємна вага', 'Місто', 'НП', 'Телефон', '€']],
-        body: data.map(p => [
-          p.number,
-          p.weight.toFixed(2),
-          p.count,
-          p.volumes.map(v => v.toFixed(2)).join(', '),
-          p.city,
-          p.branch,
-          p.phone,
-          p.price.toFixed(2)
-        ]),
-        styles: { fontSize: 8 },
-        theme: 'striped'
-      });
-      doc.save('Посилки.pdf');
+    getAll.onerror = () => {
+      listEl.textContent = 'Помилка при завантаженні даних.';
     };
-  });
+  };
+
+  request.onerror = () => {
+    listEl.textContent = 'Не вдалося підключитися до бази.';
+  };
 </script>
 
 </body>
