--- a/Index.html
+++ b/Index.html
@@ -3,138 +3,109 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Посилки</title>
+  <title>Нова посилка</title>
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 10px; max-width: 480px; margin: auto; }
-    h1 { text-align: center; }
-    form { background: #f3f3f3; padding: 10px; border-radius: 8px; }
-    label { display: block; margin-top: 10px; font-weight: bold; }
-    input, textarea { width: 100%; padding: 8px; margin-top: 4px; box-sizing: border-box; border-radius: 4px; border: 1px solid #ccc; }
-    button { margin-top: 10px; padding: 10px; width: 100%; border: none; background: #007bff; color: white; font-size: 16px; border-radius: 5px; }
+    body { font-family: sans-serif; padding: 10px; max-width: 480px; margin: auto; }
+    label { font-weight: bold; margin-top: 10px; display: block; }
+    input, textarea, button {
+      width: 100%; padding: 8px; margin-top: 5px;
+      border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box;
+    }
+    button { background: #007bff; color: white; border: none; font-size: 16px; margin-top: 15px; }
     button:hover { background: #0056b3; }
-    .volume-container label { font-weight: normal; }
   </style>
 </head>
 <body>
+  <h2>Нова посилка</h2>
+  <form id="form">
+    <label>Номер посилки *</label>
+    <input id="number" required />
 
-<h1>Нова посилка</h1>
-<form id="form">
-  <label>Номер посилки *</label>
-  <input id="number" required />
+    <label>Вага (кг) *</label>
+    <input id="weight" type="number" step="0.01" required />
 
-  <label>Вага (кг) *</label>
-  <input id="weight" type="number" step="0.01" required />
+    <label>Кількість місць *</label>
+    <input id="count" type="number" min="1" value="1" required />
 
-  <label>Кількість місць *</label>
-  <input id="count" type="number" min="1" value="1" required />
+    <div id="volumes"></div>
 
-  <div id="volumes" class="volume-container"></div>
+    <label>Місто *</label>
+    <input id="city" required />
 
-  <label>Місто *</label>
-  <input id="city" required />
+    <label>Відділення Нової Пошти *</label>
+    <input id="branch" required />
 
-  <label>Відділення Нової Пошти *</label>
-  <input id="branch" required />
+    <label>Телефон *</label>
+    <input id="phone" required />
 
-  <label>Телефон *</label>
-  <input id="phone" type="text" required />
+    <label>Ціна (€) *</label>
+    <input id="price" type="number" step="0.01" required />
 
-  <label>Ціна (€) *</label>
-  <input id="price" type="number" step="0.01" required />
+    <label>Опис</label>
+    <textarea id="desc" rows="2"></textarea>
 
-  <label>Опис</label>
-  <textarea id="desc" rows="2"></textarea>
+    <button type="submit">Зберегти</button>
+  </form>
 
-  <button type="submit">Зберегти</button>
-</form>
+  <script>
+    let db;
+    const request = indexedDB.open('ParcelsDB', 1);
 
-<script>
-  const countInput = document.getElementById('count');
-  const volumesDiv = document.getElementById('volumes');
-  const form = document.getElementById('form');
-
-  // Створити інпути для обʼємної ваги
-  function renderVolumeInputs(count) {
-    volumesDiv.innerHTML = '';
-    for (let i = 0; i < count; i++) {
-      const label = document.createElement('label');
-      label.textContent = `Обʼємна вага місця #${i + 1}`;
-      const input = document.createElement('input');
-      input.type = 'number';
-      input.step = '0.01';
-      input.required = true;
-      input.name = 'volume';
-      volumesDiv.appendChild(label);
-      volumesDiv.appendChild(input);
-    }
-  }
-
-  countInput.addEventListener('input', () => {
-    const count = parseInt(countInput.value) || 1;
-    renderVolumeInputs(count);
-  });
-
-  renderVolumeInputs(1);
-
-  // IndexedDB
-  let db;
-  const request = indexedDB.open('ParcelsDB', 1);
-  request.onupgradeneeded = event => {
-    db = event.target.result;
-    if (!db.objectStoreNames.contains('parcels')) {
+    request.onupgradeneeded = e => {
+      db = e.target.result;
       db.createObjectStore('parcels', { keyPath: 'number' });
-    }
-  };
-  request.onsuccess = event => {
-    db = event.target.result;
-  };
-  request.onerror = () => {
-    alert('Помилка при підключенні до бази даних!');
-  };
-
-  form.addEventListener('submit', e => {
-    e.preventDefault();
-    if (!db) {
-      alert('База даних ще не готова. Спробуйте пізніше.');
-      return;
-    }
-
-    const number = document.getElementById('number').value.trim();
-    const weight = parseFloat(document.getElementById('weight').value);
-    const count = parseInt(countInput.value);
-    const volumes = Array.from(document.getElementsByName('volume')).map(i => parseFloat(i.value));
-    const city = document.getElementById('city').value.trim();
-    const branch = document.getElementById('branch').value.trim();
-    const phone = document.getElementById('phone').value.trim();
-    const price = parseFloat(document.getElementById('price').value);
-    const desc = document.getElementById('desc').value.trim();
-
-    if (volumes.length !== count || volumes.some(isNaN)) {
-      alert('Заповніть всі обʼємні ваги!');
-      return;
-    }
-
-    const parcel = {
-      number, weight, count, volumes,
-      city, branch, phone, price, desc,
-      createdAt: new Date().toISOString()
+    };
+    request.onsuccess = e => {
+      db = e.target.result;
+      console.log('База готова');
     };
 
-    const tx = db.transaction('parcels', 'readwrite');
-    const store = tx.objectStore('parcels');
-    const req = store.put(parcel);
+    const countInput = document.getElementById('count');
+    const volumesDiv = document.getElementById('volumes');
 
-    req.onsuccess = () => {
-      alert('Посилка збережена!');
-      form.reset();
-      renderVolumeInputs(1);
-    };
+    function renderVolumeInputs(count) {
+      volumesDiv.innerHTML = '';
+      for (let i = 0; i < count; i++) {
+        const label = document.createElement('label');
+        label.textContent = `Обʼємна вага місця #${i + 1}`;
+        const input = document.createElement('input');
+        input.type = 'number';
+        input.step = '0.01';
+        input.required = true;
+        input.name = 'volume';
+        volumesDiv.appendChild(label);
+        volumesDiv.appendChild(input);
+      }
+    }
 
-    req.onerror = () => {
-      alert('Помилка при збереженні!');
-    };
-  });
-</script>
+    countInput.addEventListener('input', () => {
+      renderVolumeInputs(parseInt(countInput.value) || 1);
+    });
+    renderVolumeInputs(1);
 
+    document.getElementById('form').addEventListener('submit', e => {
+      e.preventDefault();
+      const data = {
+        number: document.getElementById('number').value.trim(),
+        weight: parseFloat(document.getElementById('weight').value),
+        count: parseInt(document.getElementById('count').value),
+        volumes: Array.from(document.getElementsByName('volume')).map(i => parseFloat(i.value)),
+        city: document.getElementById('city').value.trim(),
+        branch: document.getElementById('branch').value.trim(),
+        phone: document.getElementById('phone').value.trim(),
+        price: parseFloat(document.getElementById('price').value),
+        desc: document.getElementById('desc').value.trim(),
+        createdAt: new Date().toISOString()
+      };
+
+      const tx = db.transaction(['parcels'], 'readwrite');
+      tx.objectStore('parcels').put(data);
+      tx.oncomplete = () => {
+        alert('Посилку збережено!');
+        e.target.reset();
+        renderVolumeInputs(1);
+      };
+    });
+  </script>
 </body>
 </html>
