--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-  <title>Посилки</title>
+  <title>Посилка</title>
   <style>
-    body { font-family: sans-serif; margin: 0; padding: 15px; max-width: 500px; margin: auto; }
+    body { font-family: sans-serif; margin: 0; padding: 10px; max-width: 480px; margin: auto; }
     h1 { text-align: center; }
-    form { background: #f5f5f5; padding: 15px; border-radius: 8px; }
+    form { background: #f3f3f3; padding: 10px; border-radius: 8px; }
     label { display: block; margin-top: 10px; font-weight: bold; }
     input, textarea { width: 100%; padding: 8px; margin-top: 4px; box-sizing: border-box; border-radius: 4px; border: 1px solid #ccc; }
-    button { margin-top: 15px; padding: 10px; width: 100%; border: none; background: #007bff; color: white; font-size: 16px; border-radius: 5px; }
+    button { margin-top: 10px; padding: 10px; width: 100%; border: none; background: #007bff; color: white; font-size: 16px; border-radius: 5px; }
     button:hover { background: #0056b3; }
-    table { width: 100%; margin-top: 20px; border-collapse: collapse; }
-    th, td { padding: 6px; border: 1px solid #ccc; font-size: 14px; }
     .volume-container label { font-weight: normal; }
   </style>
 </head>
@@ -49,27 +47,26 @@
     <button type="submit">Зберегти</button>
   </form>
 
-  <h2 style="margin-top:30px">Посилки</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Номер</th>
-        <th>Місто</th>
-        <th>Вага</th>
-        <th>Місць</th>
-        <th>Обʼємна вага</th>
-        <th>Телефон</th>
-        <th>€</th>
-      </tr>
-    </thead>
-    <tbody id="parcelList"></tbody>
-  </table>
+  <!-- Firebase -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
-  <script>
-    const form = document.getElementById('form');
+    const firebaseConfig = {
+      apiKey: "AIzaSyBjLuotxHzCIkSLduDlLb3AYTc6A6A8NYc",
+      authDomain: "parcelapp-900b9.firebaseapp.com",
+      projectId: "parcelapp-900b9",
+      storageBucket: "parcelapp-900b9.firebasestorage.app",
+      messagingSenderId: "310089427450",
+      appId: "1:310089427450:web:f40df867b722ce2128dc43",
+      measurementId: "G-G4SQCW0FXD"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
     const countInput = document.getElementById('count');
     const volumesDiv = document.getElementById('volumes');
-    const parcelList = document.getElementById('parcelList');
 
     function renderVolumeInputs(count) {
       volumesDiv.innerHTML = '';
@@ -90,35 +87,11 @@
       renderVolumeInputs(parseInt(countInput.value) || 1);
     });
 
-    function saveParcel(data) {
-      let parcels = JSON.parse(localStorage.getItem('parcels') || '[]');
-      parcels.push(data);
-      localStorage.setItem('parcels', JSON.stringify(parcels));
-    }
+    renderVolumeInputs(1); // Initial
 
-    function renderParcels() {
-      const parcels = JSON.parse(localStorage.getItem('parcels') || '[]');
-      parcelList.innerHTML = '';
-      parcels.forEach(p => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${p.number}</td>
-          <td>${p.city}</td>
-          <td>${p.weight} кг</td>
-          <td>${p.count}</td>
-          <td>${p.volumes.join(', ')}</td>
-          <td>${p.phone}</td>
-          <td>${p.price}</td>
-        `;
-        parcelList.appendChild(row);
-      });
-    }
-
-    renderVolumeInputs(1); // initial
-    renderParcels();
-
-    form.addEventListener('submit', e => {
+    document.getElementById('form').addEventListener('submit', async (e) => {
       e.preventDefault();
+
       const number = document.getElementById('number').value.trim();
       const weight = parseFloat(document.getElementById('weight').value);
       const count = parseInt(countInput.value);
@@ -130,16 +103,23 @@
       const desc = document.getElementById('desc').value.trim();
 
       if (volumes.length !== count || volumes.some(isNaN)) {
-        alert('Заповніть всі обʼємні ваги!');
+        alert('Заповніть обʼємну вагу правильно!');
         return;
       }
 
-      const parcel = { number, weight, count, volumes, city, branch, phone, price, desc };
-      saveParcel(parcel);
-      renderParcels();
-      form.reset();
-      renderVolumeInputs(1);
-      alert('Посилка збережена!');
+      const data = {
+        number, weight, count, volumes, city, branch, phone, price, desc,
+        createdAt: new Date().toISOString()
+      };
+
+      try {
+        await addDoc(collection(db, "parcels"), data);
+        alert("Посилку збережено!");
+        document.getElementById('form').reset();
+        renderVolumeInputs(1);
+      } catch (error) {
+        alert("Помилка при збереженні: " + error.message);
+      }
     });
   </script>
 </body>
